add release script